demos/54-eg-poc1-kube-vip/30-gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: shop
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: http-gw-proxy
  addresses:
    - type: IPAddress
      value: "172.19.255.100"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: api.eg-poc1.poc.local
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: api.eg-poc1.poc.local
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eg-poc1-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grpc-gw
  namespace: shop
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: grpc-gw-proxy
  addresses:
    - type: IPAddress
      value: "172.19.255.101"
  listeners:
    - name: h2c
      protocol: HTTP
      port: 80
      hostname: grpc.eg-poc1.poc.local
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-grpc
      protocol: HTTPS
      port: 443
      hostname: grpc.eg-poc1.poc.local
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eg-poc1-tls
      allowedRoutes:
        namespaces:
          from: Same
